mount ssh folder

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,6 @@
 services:
   remote-docker:
     image: ${DESKTOP_PLUGIN_IMAGE}
+    volumes:
+      # Mount SSH configuration from the host (user's machine)
+      - ~/.ssh:/root/.ssh:ro
