--- a/ui/package.json
+++ b/ui/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@docker/docker-mui-theme": "<0.1.0",
+    "@docker/docker-mui-theme": "0.0.13",
     "@docker/extension-api-client": "0.3.4",
-    "@emotion/react": "11.10.4",
-    "@emotion/styled": "11.10.4",
-    "@mui/material": "5.10.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@mui/material": "6.4.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "scripts": {
     "dev": "vite",
@@ -19,13 +19,13 @@
   },
   "devDependencies": {
     "@docker/extension-api-client-types": "0.3.4",
-    "@types/jest": "^29.1.2",
-    "@types/node": "^18.7.18",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "jest": "^29.1.2",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.0"
+    "@types/jest": "29.5.14",
+    "@types/node": "22.13.5",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "@vitejs/plugin-react": "4.3.4",
+    "jest": "29.7.0",
+    "typescript": "5.7.3",
+    "vite": "6.2.0"
   }
 }
