--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "@docker/extension-api-client": "0.3.4",
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
+    "@mui/icons-material": "6.4.6",
     "@mui/material": "6.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1"
