add remaining pages

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,8 @@ services:
     volumes:
       # Mount SSH configuration from the host (user's machine)
       - ~/.ssh:/root/.ssh:ro
+      # Plugin data
+      - "remote-docker:/root/docker-extension/"
+
+volumes:
+  remote-docker:
