--- a/ui/package.json
+++ b/ui/package.json
@@ -11,7 +11,8 @@
     "@mui/icons-material": "6.4.6",
     "@mui/material": "6.4.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "recharts": "2.15.1"
   },
   "scripts": {
     "dev": "vite",
